--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           version: 0.11.0-dev.3971+6bc9c4f71
 
       - name: Dependencies (Linux)
-        if: runner.os == "Linux"
+        if: ${{runner.os == "Linux"}}
         run: |
           apt-get install -y xorg-dev
 
