--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest, osx-arm64]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -40,7 +40,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: mv-widgets-${{ runner.os }}
+          name: mv-widgets-${{ matrix.os }}
           path: zig-out
 
       - name: GH Release
