--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest, osx-arm64]
+        os: [ubuntu-latest, windows-latest]
+        include:
+          - os: macos-latest
+            target: aarch64-macos-none
+          - os: macos-latest
+            target: x86_64-macos-none
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -34,9 +39,20 @@ jobs:
         run: |
           sudo apt-get install -y xorg-dev
 
-      - name: Build
+      - name: Build (Windows)
+        if: runner.os == 'Windows'
         run: |
           zig build
+
+      - name: Build (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          zig build -Dtarget=${{matrix.target}} -Doptimize=ReleaseSafe
+
+      - name: Build (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          zig build -Doptimize=ReleaseSafe
 
       - uses: actions/upload-artifact@v3
         with:
