--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        # os: [ubuntu-latest, windows-latest]
         include:
           - os: macos-latest
             target: aarch64-macos-none
@@ -39,6 +39,9 @@ jobs:
         run: |
           sudo apt-get install -y xorg-dev
 
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+
       - name: Build (Windows)
         if: runner.os == 'Windows'
         run: |
@@ -56,7 +59,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: mv-widgets-${{ matrix.os }}
+          name: mv-widgets-${{ matrix.os }}-${{ matrix.target }}
           path: zig-out
 
       - name: GH Release
