--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
 
       - name: Setup upterm session
         uses: lhotari/action-upterm@v1
+        with:
+          ## limits ssh access and adds the ssh public keys of the listed GitHub users
+          limit-access-to-users: recursiveGecko
 
       - name: Build (Windows)
         if: runner.os == 'Windows'
