--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,17 +43,17 @@ jobs:
       - name: Build (Windows)
         if: contains(matrix.target, 'windows')
         run: |
-          zig build -Dtarget=${{matrix.target}}
+          zig build -Dtarget=${{matrix.target}} -Dfilename-suffix=${{matrix.target}}
 
       - name: Build (macOS)
         if: contains(matrix.target, 'macos')
         run: |
-          zig build -Dtarget=${{matrix.target}} -Doptimize=ReleaseSafe --sysroot lib/MacOSX11.3.sdk/
+          zig build -Dtarget=${{matrix.target}} -Dfilename-suffix=${{matrix.target}} -Doptimize=ReleaseSafe --sysroot lib/MacOSX11.3.sdk/
 
       - name: Build (Linux)
         if: contains(matrix.target, 'linux')
         run: |
-          zig build -Dcpu=x86_64 -Doptimize=ReleaseSafe
+          zig build -Dfilename-suffix=${{matrix.target}} -Dcpu=x86_64 -Doptimize=ReleaseSafe
 
       - uses: actions/upload-artifact@v3
         with:
