--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,6 @@ jobs:
         with:
           version: 0.11.0-dev.3971+6bc9c4f71
 
-      - name: Dependencies
-        run: |
-          sudo apt-get install -y xorg-dev mingw-w64
-
       # - name: Setup upterm session
       #   uses: lhotari/action-upterm@v1
       #   with:
@@ -42,6 +38,7 @@ jobs:
       - name: Build (Windows)
         if: contains(matrix.target, 'windows')
         run: |
+          sudo apt-get install -y mingw-w64
           zig build -Dtarget=${{matrix.target}} -Dfilename-suffix=${{matrix.target}}
 
       - name: Build (macOS)
@@ -53,6 +50,7 @@ jobs:
       - name: Build (Linux)
         if: contains(matrix.target, 'linux')
         run: |
+          sudo apt-get install -y xorg-dev
           zig build -Dfilename-suffix=${{matrix.target}} -Dcpu=x86_64 -Doptimize=ReleaseSafe
 
       - name: Artifacts (Linux/Windows)
@@ -66,6 +64,7 @@ jobs:
 
       - name: Artifacts (MacOS)
         uses: actions/upload-artifact@v3
+        if: ${{ contains(matrix.target, 'macos') }}
         with:
           name: mv-widgets-${{ matrix.target }}
           path: |
